seg42/k8s/novnc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-novnc
  # namespace: user01-seg42
  labels:
    app: pod-novnc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-novnc
  template:
    metadata:
      labels:
        app: pod-novnc
    spec:
      # nodeSelector:
        # kubernetes.io/hostname: ids-rj
      containers:
      - name: pod-novnc
        image: marquesmarcelo/ubuntu-novnc:latest
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 5900
            protocol: TCP
