seg42/k8s/novnc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novnc
  # namespace: user01-seg42
  labels:
    app: novnc
spec:
  # Otimizado para ClusterIP, pois o Ingress gerencia o acesso externo
  type: NodePort 
  selector:
    app: pod-novnc
  ports:
  - name: "novnc-http"
    port: 8080
    targetPort: 8080
    nodePort: 31080 #(Removido, pois ClusterIP não usa NodePort)
